--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,6 @@ spring:
     properties:
       hibernate:
         globally_quoted_identifiers: true
+  main:
+    allow-bean-definition-overriding: true
+
